# misis2023f-22-03-vatagina-e-e

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: example.md  html_example.md  report.md
prj.codeforces/: 0750a.cpp  1703с.cpp  1883a.cpp  1883b.cpp  1899a.cpp  1899b.cpp  1899с.cpp  1919a.cpp  1919b.cpp  1919с.cpp  750a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  CMakeLists.txt.txt
prj.cw/project/: CMakeLists.txt  bgfx_pr.cpp  bgfx_pr.h
prj.cw/texturing/: CMakeLists.txt  CMakeSettings.json  descriptions.txt
prj.cw/texturing/docs/: Doxyfile
prj.cw/texturing/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
prj.cw/texturing/texturing/: CMakeLists.txt  texture.cpp
prj.cw/texturing/texturing/include/: texture.h
